Добавляет scss файлы. Подключает шрифты. Добавляет scss-переменные.

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,22 @@
 /* здесь используйте глобальные переменные */
+$font-main: "Oswald", sans-serif;
+$font-secondary: "Lato", sans-serif;
+
+$text-color: #000000;
+$bg-color:#68b738;
+$bg-color-secondary:#f2f2f2;
+
+$button-color: #ffffff;
+$button-bg-color: #68b738;
+$button-secondary-color: #cdcdcd;
+$button-secondary-bg-color: #f2f2f2;
+
+// $basic-green: #68b738;
+// $basic-grey: #f2f2f2;
+// $special-grey-2: #ebebeb;
+// $special-grey: #cdcdcd;
+// $special-grey-2: #666666;
+// $special-dark-grey: #444444;
+// $special-dark-grey-2: #222222;
+// $status-error: #ff8282;
+// $basic-green-2: #5eaa2f;
