--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,9 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
+body {
+  font-family: $font-main;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: $text-color;
+}
+
