Добавялет стилизацию кнопок

--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -4,10 +4,35 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  text-transform: uppercase;
   text-align: center;
+  text-decoration: none;
   background-color: $button-bg-color;
   color: $button-color;
+  border: none;
+
+  &:hover {
+    background-color: $button-bg-color-hover;
+    color: $button-color-hover;
+  }
+
+  &:active {
+    background-color: $button-bg-color-active;
+    color: $button-color-active;
+  }
 }
 
 .button--secondary {
+  background-color: $button-secondary-bg-color;
+  color: $button-secondary-color;
+
+  &:hover {
+    background-color: $button-secondary-bg-color-hover;
+    color: $button-secondary-color;
+  }
+
+  &:active {
+    background-color: $button-secondary-bg-color-active;
+    color: $button-secondary-color;
+  }
 }
