--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,6 +1,6 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
 body {
-  font-family: $font-main;
+  font-family: $font-primary;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
