--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -11,6 +11,11 @@
 
 }
 
-.main-footer__partner-link{
-
+.main-footer__partner-link {
+  font-family: $font-secondary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-decoration: none;
+  color: $text-secondary-color;
 }
