--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -2,22 +2,44 @@
 }
 
 .category__list {
+  font-weight: 400;
 }
 
 .category__item {
+  background-color: $bg-primary-color;
 }
 
 .category__item--slim {
 }
 
 .category__title {
+  font-size: 24px;
+  line-height: 37px;
+  text-transform: uppercase;
 }
 
 .category__desc {
   font-family: $font-secondary;
+  font-size: 14px;
+  line-height: 18px;
+  color: $text-secondary-color;
 }
 
 .category__link {
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: inherit;
+  text-decoration: none;
+
+  &:hover,
+  &:focus{
+
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .category__item--heavy {
