--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,13 +1,24 @@
 .contacts {
+  background-color: $bg-basic-color;
 }
 
 .contacts__title {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase;
 }
 
 .contacts__address-wrap {
 }
 
 .contacts__address {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  font-style: normal;
+  color: $text-secondary-color;
 }
 
 .contacts__map {
