--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -2,12 +2,18 @@
 }
 
 .features__title {
+  line-height: 40px;
 }
 
 .features__list {
 }
 
 .features__item {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: $text-secondary-color;
 }
 
 .features__item--icon-leaf {
