--- a/source/styles/blocks/input.scss
+++ b/source/styles/blocks/input.scss
@@ -1,3 +1,11 @@
 .input {
   font-family: inherit;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  color: $input-color;
+
+  &:placeholder-shown {
+    color: $input-color;
+  }
 }
