--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -3,12 +3,28 @@
 }
 
 .product__title {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: $card-title-color;
 }
 
 .product__count {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  color: $text-secondary-color;
 }
 
 .product__price {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  text-align: right;
+  color: $text-secondary-color;
 }
 
 .product__button {
