--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -4,6 +4,7 @@ $font-secondary: "Lato", sans-serif;
 
 $text-color: #000000;
 $text-secondary-color:#444444;
+$text-with-bg-color:#ffffff;
 
 $bg-basic-color:#ffffff;
 $bg-primary-color:#f2f2f2;
@@ -24,6 +25,9 @@ $button-secondary-bg-color-hover: #ebebeb;
 $button-secondary-bg-color-active: #ebebeb;
 
 $input-color:#444444;
+
+$card-title-color:#222222;
+$card-title-secondary-color:#111111;
 
 // $basic-green: #68b738;
 // $basic-grey: #f2f2f2;
