--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -2,6 +2,7 @@
 }
 
 .catalog-extra__title {
+
 }
 
 .catalog-extra__list {
@@ -12,7 +13,15 @@
 
 
 .catalog-extra__promotion {
+  background-color: rgba($bg-secondary-color, 0.85);
+  // background-image: url("../../images/promotion_cat_background-mobile@1x.jpg");
 }
 
 .catalog-extra__promotion-text {
+  font-family: $font-secondary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  color: $text-with-bg-color;
 }
