--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,5 +1,3 @@
-$hero-index-color: #ffffff;
-
 .hero {
   background:
     linear-gradient(
@@ -7,7 +5,7 @@ $hero-index-color: #ffffff;
       $bg-secondary-color 60%,
       $bg-basic-color 60%
     );
-  color: $hero-index-color;
+  color: $text-with-bg-color;
   text-align: center;
 
   @media (min-width: 768px) {
