Исправляет ошибки линтера

--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -1,15 +1,15 @@
-.catalog-extra {
-}
+// .catalog-extra {
+// }
 
-.catalog-extra__title {
+// .catalog-extra__title {
 
-}
+// }
 
-.catalog-extra__list {
-}
+// .catalog-extra__list {
+// }
 
-.catalog-extra__item {
-}
+// .catalog-extra__item {
+// }
 
 
 .catalog-extra__promotion {
