--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -1,17 +1,17 @@
-.compare-slider {
-}
+// .compare-slider {
+// }
 
-.compare-slider__image {
-}
+// .compare-slider__image {
+// }
 
-.compare-slider__image--before {
-}
+// .compare-slider__image--before {
+// }
 
-.compare-slider__image--after {
-}
+// .compare-slider__image--after {
+// }
 
-.compare-slider__control {
-}
+// .compare-slider__control {
+// }
 
-.compare-slider__control-button {
-}
+// .compare-slider__control-button {
+// }
