--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -9,8 +9,8 @@
   text-transform: uppercase;
 }
 
-.contacts__address-wrap {
-}
+// .contacts__address-wrap {
+// }
 
 .contacts__address {
   font-family: $font-secondary;
@@ -21,8 +21,8 @@
   color: $text-secondary-color;
 }
 
-.contacts__map {
-}
+// .contacts__map {
+// }
 
-.contacts__map-image {
-}
+// .contacts__map-image {
+// }
