--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -6,8 +6,8 @@
   line-height: 40px;
 }
 
-.live-example__inner-wrap {
-}
+// .live-example__inner-wrap {
+// }
 
 .live-example__desc {
   font-family: $font-secondary;
@@ -17,11 +17,11 @@
   color: $text-secondary-color;
 }
 
-.live-example__list {
-}
+// .live-example__list {
+// }
 
-.live-example__item {
-}
+// .live-example__item {
+// }
 
 .live-example__term {
   font-family: $font-secondary;
@@ -47,11 +47,11 @@
   text-transform: uppercase;
 }
 
-.live-example__total-term {
-}
+// .live-example__total-term {
+// }
 
-.live-example__total-value {
-}
+// .live-example__total-value {
+// }
 
-.live-example__slider {
-}
+// .live-example__slider {
+// }
