--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,14 +1,14 @@
-.main-nav {
-}
+// .main-nav {
+// }
 
-.main-nav__toggle {
-}
+// .main-nav__toggle {
+// }
 
-.main-nav__list {
-}
+// .main-nav__list {
+// }
 
-.main-nav__item {
-}
+// .main-nav__item {
+// }
 
 .main-nav__link {
   font-size: 20px;
@@ -27,5 +27,5 @@
   }
 }
 
-.main-nav__link--current {
-}
+// .main-nav__link--current {
+// }
