--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -1,11 +1,14 @@
-.product-card {
-}
+// .product-card {
+// }
 
-.product-card__link-image {
-}
+// .product-card--more {
+// }
 
-.product-card__image {
-}
+// .product-card__link-image {
+// }
+
+// .product-card__image {
+// }
 
 .product-card__link-title {
   text-decoration: none;
@@ -45,19 +48,15 @@
   text-align: center;
 }
 
-.product-card__desc-inner-wrap {
-}
+// .product-card__desc-inner-wrap {
+// }
 
-.product-card__desc-term {
-}
+// .product-card__desc-term {
+// }
 
 .product-card__desc-value {
   text-align: right;
 }
 
-.product-card__button {
-}
-
-.product-card--more {
-}
-
+// .product-card__button {
+// }
