--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,6 +1,5 @@
-
-.product {
-}
+// .product {
+// }
 
 .product__title {
   font-size: 16px;
@@ -27,5 +26,5 @@
   color: $text-secondary-color;
 }
 
-.product__button {
-}
+// .product__button {
+// }
