--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,20 +1,20 @@
-.social {
-}
+// .social {
+// }
 
-.social__list {
-}
+// .social__list {
+// }
 
-.social__item {
-}
+// .social__item {
+// }
 
-.social__link {
-}
+// .social__link {
+// }
 
-.social__link--icon-vk {
-}
+// .social__link--icon-vk {
+// }
 
-.social__link--icon-yt {
-}
+// .social__link--icon-yt {
+// }
 
-.social__link--icon-tg {
-}
+// .social__link--icon-tg {
+// }
