--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,8 +1,8 @@
-.subscribe {
-}
+// .subscribe {
+// }
 
-.subscribe__title {
-}
+// .subscribe__title {
+// }
 
 .subscribe__desc {
   font-size: 16px;
@@ -11,11 +11,11 @@
   text-align: center;
 }
 
-.subscribe__form {
-}
+// .subscribe__form {
+// }
 
-.subscribe__form-input {
-}
+// .subscribe__form-input {
+// }
 
-.subscribe__form-button {
-}
+// .subscribe__form-button {
+// }
