--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,8 +1,8 @@
-.catalog {
-}
+// .catalog {
+// }
 
-.catalog__list {
-}
+// .catalog__list {
+// }
 
-.catalog__item {
-}
+// .catalog__item {
+// }
