--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,12 +1,12 @@
-.features {
-}
+// .features {
+// }
 
 .features__title {
   line-height: 40px;
 }
 
-.features__list {
-}
+// .features__list {
+// }
 
 .features__item {
   font-family: $font-secondary;
@@ -16,14 +16,14 @@
   color: $text-secondary-color;
 }
 
-.features__item--icon-leaf {
-}
+// .features__item--icon-leaf {
+// }
 
-.features__item--icon-water {
-}
+// .features__item--icon-water {
+// }
 
-.features__item--icon-eat {
-}
+// .features__item--icon-eat {
+// }
 
-.features__item--icon-clock {
-}
+// .features__item--icon-clock {
+// }
