--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -19,6 +19,14 @@
   line-height: 20px;
   font-style: normal;
   color: $text-secondary-color;
+
+  @media (min-width: 768px) {
+    text-align: right;
+  }
+
+  @media (min-width: 1440px) {
+    text-align: left;
+  }
 }
 
 // .contacts__map {
