--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -11,6 +11,16 @@
   @media (min-width: 768px) {
     color: $text-color;
     text-align: left;
+    background: $bg-basic-color;
+  }
+
+  @media (min-width: 1440px) {
+    background:
+      linear-gradient(
+        to left,
+        $bg-secondary-color 50%,
+        $bg-basic-color 50%
+      );
   }
 }
 
@@ -22,9 +32,13 @@
 .hero__desc {
   font-size: 14px;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1em;
   text-transform: uppercase;
   color: inherit;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 // .hero__image {
