--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,5 +1,12 @@
-// .main-nav {
-// }
+.main-nav {
+  color: $text-color;
+  background-color: $bg-basic-color;
+
+  @media (min-width: 1440px) {
+    color: $text-with-bg-color;
+    background-color: $bg-secondary-color;
+  }
+}
 
 // .main-nav__toggle {
 // }
@@ -13,17 +20,29 @@
 .main-nav__link {
   font-size: 20px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 1em;
+  color: inherit;
   text-decoration: none;
-  color: $text-color;
 
   &:hover,
   &:focus {
-    color: rgba($text-color, 0.6);
+    // color: rgba($main-nav-link-color, 0.6);
+    opacity: 0.6;
   }
 
   &:active {
-    color: rgba($text-color, 0.3);
+    // color: rgba($main-nav-link-color, 0.3);
+    opacity: 0.3;
+  }
+
+  @media (min-width: 768px) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: 1440px) {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
 
