--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -24,4 +24,12 @@
   line-height: 20px;
   text-align: center;
   color: $text-with-bg-color;
+
+  @media (min-width: 768px) {
+    text-align: left;
+  }
+
+  @media (min-width: 1440px) {
+    text-align: center;
+  }
 }
