--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -18,18 +18,25 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    font-size: 36px;
+    line-height: 1em;
+  }
 }
 
 .category__desc {
-  font-family: $font-secondary;
-  font-size: 14px;
-  line-height: 18px;
+  @include index-text();
   color: $text-secondary-color;
+
+  @media (min-width: 768px) {
+    color: $text-color;
+  }
 }
 
 .category__link {
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1em;
   text-transform: uppercase;
   color: inherit;
   text-decoration: none;
@@ -41,5 +48,10 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.5em;
   }
 }
