--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -9,10 +9,7 @@
 // }
 
 .features__item {
-  font-family: $font-secondary;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
+  @include index-text();
   color: $text-secondary-color;
 }
 
