--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -4,26 +4,48 @@
 .product__title {
   font-size: 16px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 1em;
   text-transform: uppercase;
   color: $card-title-color;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .product__count {
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1em;
   color: $text-secondary-color;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  // @media (min-width: 1440px) {
+  //   text-align: right;
+  // }
 }
 
 .product__price {
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
-  line-height: 14px;
-  text-align: right;
+  line-height: 1em;
+  // text-align: right;
   color: $text-secondary-color;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  // @media (min-width: 1440px) {
+  //   text-align: left;
+  // }
 }
 
 // .product__button {
