--- a/source/styles/blocks/section-title.scss
+++ b/source/styles/blocks/section-title.scss
@@ -1,5 +1,9 @@
 .section-title {
   font-size: 36px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 1em;
+
+  @media (min-width: 768px) {
+    font-size: 60px;
+  }
 }
