--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -9,6 +9,11 @@
   font-weight: 400;
   line-height: 24px;
   text-align: center;
+
+  @media (min-width: 768px) {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 
 // .subscribe__form {
@@ -17,5 +22,7 @@
 // .subscribe__form-input {
 // }
 
-// .subscribe__form-button {
-// }
+.subscribe__form-button {
+  font-size: 20px;
+  line-height: 26px;
+}
