--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -7,3 +7,16 @@
     src: $font-src;
   }
 }
+
+@mixin index-text() {
+  font-family: $font-secondary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.5em;
+  }
+}
