--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,9 +1,16 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
 body {
-  font-family: $font-primary;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  color: $text-color;
-  background-color: $bg-basic-color;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
