--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -2,6 +2,7 @@
 // }
 
 .category__list {
+  @include list();
   font-weight: 400;
 }
 
@@ -16,6 +17,7 @@
 
 .category__title {
   font-size: 24px;
+  font-weight: 400;
   line-height: 37px;
   text-transform: uppercase;
 
@@ -26,7 +28,7 @@
 }
 
 .category__desc {
-  @include index-text();
+  @include text();
   color: $text-secondary-color;
 
   @media (min-width: 768px) {
@@ -42,7 +44,7 @@
   text-decoration: none;
 
   &:hover,
-  &:focus {
+  &:focus-visible {
     opacity: 0.6;
   }
 
