--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,5 +1,11 @@
 // .page {
 // }
 
-// .page__body {
-// }
+.page__body {
+  font-family: $font-primary;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: $text-color;
+  background-color: $bg-basic-color;
+}
