--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -8,7 +8,7 @@
   }
 }
 
-@mixin index-text() {
+@mixin text() {
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
@@ -19,4 +19,10 @@
     font-size: 16px;
     line-height: 1.5em;
   }
+}
+
+@mixin list() {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
