--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,40 @@
 /* здесь используйте глобальные переменные */
+$font-primary: "Oswald", sans-serif;
+$font-secondary: "Lato", sans-serif;
+
+$text-color: #000000;
+$text-secondary-color:#444444;
+$text-with-bg-color:#ffffff;
+
+$bg-basic-color:#ffffff;
+$bg-primary-color:#f2f2f2;
+$bg-secondary-color:#68b738;
+
+//кнопки
+$button-color: #ffffff;
+$button-color-hover: #ffffff;
+$button-color-active:rgba(255, 255, 255, 0.3);
+
+$button-bg-color: #68b738;
+$button-bg-color-hover: #5eaa2f;
+$button-bg-color-active: #5eaa2f;
+
+$button-secondary-color: #444444;
+$button-secondary-bg-color: #f2f2f2;
+$button-secondary-bg-color-hover: #ebebeb;
+$button-secondary-bg-color-active: #ebebeb;
+
+$input-color:#444444;
+
+$card-title-color:#222222;
+$card-title-secondary-color:#111111;
+
+// $basic-green: #68b738;
+// $basic-grey: #f2f2f2;
+// $special-grey-2: #ebebeb;
+// $special-grey: #cdcdcd;
+// $special-grey-2: #666666;
+// $special-dark-grey: #444444;
+// $special-dark-grey-2: #222222;
+// $status-error: #ff8282;
+// $basic-green-2: #5eaa2f;
