--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -1,8 +1,20 @@
-// .logo {
-// }
+.logo {
+  text-decoration: none;
+  color: #111111;
+
+  &:hover,
+  &:focus {
+    color: #3e3e3e;
+  }
+
+  &:active {
+    color: #6b6b6b;
+  }
+}
 
 // .logo__image {
 // }
 
 // .logo__text {
+
 // }
