--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -26,6 +26,10 @@
   text-align: center;
   color: $text-with-bg-color;
 
+  &::before {
+    @include icon(78px,81px,"gift");
+  }
+
   @media (min-width: 768px) {
     text-align: left;
   }
