--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -3,6 +3,8 @@
 
 .social__list {
   @include list();
+  display: flex;
+  flex-wrap: wrap;
 }
 
 // .social__item {
@@ -14,7 +16,7 @@
   color: var(--color);
 
   &::before {
-    @include icon-mask(40px,40px,"");
+    @include icon-mask(40px,40px);
     background-color: var(--color);
     mask-size: 27px 18px;
   }
