--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -3,11 +3,33 @@
 
 .category__list {
   @include list();
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  gap: 20px;
   font-weight: 400;
+
+  @media (min-width: 768px) {
+    gap: 30px;
+  }
+
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    gap: 80px;
+  }
 }
 
 .category__item {
+  padding: 21px 20px 18px;
   background-color: $bg-primary-color;
+
+  @media (min-width: 768px) {
+    padding: 77px 63px 53px 52px;
+  }
+
+  @media (min-width: 1440px) {
+    max-width: 570px;
+  }
 }
 
 .category__item--slim::before {
