--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -37,12 +37,21 @@
 
 .main-nav__list {
   @include list();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 // .main-nav__item {
 // }
 
 .main-nav__link {
+  padding: 23px;
+  display: block;
   font-size: 20px;
   font-weight: 400;
   line-height: 1em;
