--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -7,14 +7,26 @@
 
 .features__list {
   @include list();
+  display: flex;
+  flex-flow: column wrap;
+  gap: 20px;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .features__item {
   @include text();
+  display: flex;
+  flex-flow: row wrap;
+  gap: 20px;
+  align-items: center;
   color: $text-secondary-color;
 
   &::before {
     @include icon(60px, 60px);
+    flex-shrink: 0;
     background-color: $bg-secondary-color;
     background-size: 26px 30px;
 
@@ -22,6 +34,13 @@
       width: 80px;
       height: 80px;
     }
+  }
+
+  @media (min-width: 768px) {
+    width: 325px;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
