--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -1,12 +1,15 @@
 .live-example {
+  display: grid;
   background-color: $bg-primary-color;
 
   // todo почитать про сложные фоны
   // @media (min-width: 768px) {
   // }
 
-  // @media (min-width: 1440px) {
-  // }
+  @media (min-width: 1440px) {
+    grid-template-columns: 500px 560px;
+    grid-template-rows: repeat(4, auto);
+  }
 }
 
 .live-example__title {
@@ -25,11 +28,25 @@
   color: $text-secondary-color;
 }
 
-// .live-example__list {
-// }
+.live-example__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px 32px;
 
-// .live-example__item {
-// }
+  @media (min-width: 768px) {
+    gap: 43px;
+  }
+}
+
+.live-example__item {
+  flex-basis: 124px;
+
+  @media (min-width: 768px) {
+    flex-basis: 162px;
+  }
+}
 
 .live-example__term {
   font-family: $font-secondary;
@@ -61,6 +78,11 @@
 }
 
 .live-example__item-total {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5em;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -68,6 +90,9 @@
   color: $text-color;
 
   @media (min-width: 768px) {
+    width: auto;
+    flex-direction: column;
+    margin-left: auto;
     font-size: 20px;
     text-align: right;
   }
@@ -85,5 +110,9 @@
   margin: 0;
 }
 
-// .live-example__slider {
-// }
+.live-example__slider {
+  @media (min-width: 1440px) {
+    grid-column: 2 / 3;
+    grid-row: 1 / -1;
+  }
+}
