--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -84,6 +84,7 @@
 .category__link {
   display: flex;
   align-items: center;
+  gap: 15px;
   font-size: 16px;
   line-height: 1em;
   text-transform: uppercase;
@@ -108,6 +109,7 @@
   }
 
   @media (min-width: 768px) {
+    gap: 25px;
     font-size: 20px;
     line-height: 1.5em;
   }
