--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,18 +1,42 @@
-.contacts {
+// .contacts {
+//    display: grid;
+//   grid-template-rows: auto auto;
+
+//   @media (min-width: 1440px) {
+//     grid-template-rows: 100px auto 100px;
+//   }
+// }
+
+.contants__inner-wrap {
+  padding: 26px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  justify-content: space-between;
   background-color: $bg-basic-color;
+
+  @media (min-width: 768px) {
+    padding: 61px 40px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 565px;
+    padding: 61px 80px;
+  }
 }
 
 .contacts__title {
+  grid-column: 1/2;
+  grid-row: 1/-1;
+  margin: 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
   text-transform: uppercase;
 }
 
-// .contacts__address-wrap {
-// }
-
 .contacts__address {
+  margin: 0;
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
