--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,9 +1,23 @@
 .main-footer {
+  padding: 40px 0;
+  display: grid;
+  align-items: center;
   background-color: $bg-primary-color;
+
+  @media (min-width: 768px) {
+    padding: 55px 0;
+    grid-template-columns: repeat(3, auto);
+  }
 }
 
-// .main-footer__logo {
-// }
+.main-footer__logo {
+  display: flex;
+  justify-content: center;
+
+  @media (min-width: 768px) {
+    justify-content: start;
+  }
+}
 
 // .main-footer__social {
 // }
@@ -13,6 +27,10 @@
 // }
 
 .main-footer__partner-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 23px;
   font-family: $font-secondary;
   font-size: 16px;
   font-weight: 400;
@@ -31,10 +49,14 @@
   }
 
   &:active {
+    opacity: 0.3;
+
     &::after {
       background-color: $icon-color-hover;
     }
+  }
 
-    opacity: 0.3;
+  @media (min-width: 768px) {
+    justify-content: end;
   }
 }
